Handle most IDE warnings